@@ -223,7 +223,7 @@ dependencies {
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: reformLoggingVersion
   implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: reformLoggingVersion
 
-  implementation group: 'com.github.hmcts', name: 'et-data-model', version: '1.0.42'
+  implementation group: 'com.github.hmcts', name: 'et-data-model', version: '1.0.46'
   implementation group: 'com.github.hmcts', name: 'ccd-client', version: '4.8.6'
   implementation group: 'com.github.hmcts', name: 'idam-java-client', version: '2.0.1'
   implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '4.0.3'
@@ -258,6 +258,8 @@ dependencies {
   testImplementation('org.assertj:assertj-core:3.22.0')
   testImplementation group: 'io.rest-assured', name: 'rest-assured'
   testImplementation group: 'net.javacrumbs.json-unit', name: 'json-unit', version: '2.28.0'
+
+  testImplementation 'com.github.hmcts:fortify-client:1.2.2:all'
 
   // Pact Contract Tests
   contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: '4.1.7'
@@ -311,6 +313,12 @@ runAndPublishConsumerPactTests.finalizedBy pactPublish
 
 project.ext {
   pactVersion = getCheckedOutGitCommitHash()
+}
+
+task fortifyScan(type: JavaExec)  {
+    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 pact {
